--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app="tink.skeleton">
+<html ng-app="awelzijn-history-back">
 <head>
   <meta charset="utf-8">
   <title>Tink module</title>
@@ -11,11 +11,13 @@
 </head>
 <body>
 
-<tink-skeleton data-text="Skeleton is working fine!"></tink-skeleton>
+Press F12
+<aWelzijnHistoryBack></aWelzijnHistoryBack>
 
 <!-- bower:js -->
+<script src="bower_components/angular/angular.js"></script>
 <!-- endbower -->
 
-<script src="scripts/directives/skeleton.js"></script>
+<script src="scripts/directives/awelzijn-history-back.js"></script>
 </body>
 </html>
